# brazilian-reh-analyzer

./: LICENSE  README  README.md  main_reh_analyzer.py  pyproject.toml  requirements.txt  setup.py
.old_analysis/comprehensive_analysis_2017_2025/cache/: focus_20170101_to_20250701_20250722.pkl  ipca_20170101_to_20250701_20250722.pkl
brazilian_reh_analyzer/: __init__.py  __main__.py  analyzer.py  data_fetcher.py  tests.py  utils.py  visualizations.py
docs/: api_reference.md
docs/examples/: advanced_latex_export.py  basic_usage.py  interactive_analysis.py
docs/examples/cookbooks/: advanced_analysis.py  basic_usage.py  cli_examples.md  notebook_example.ipynb
docs/examples/scripts/: README.md  run_comprehensive_analysis.py  run_covid_analysis.py  run_post_covid_analysis.py  run_pre_covid_analysis.py
docs/references/: api_reference.md  initial_prd.md  methodology.md
docs/references/mincer_zarnowitz_1969_rational_expectations_test/: mincer_zarnowitz_1969_rational_expectations_test.md  mincer_zarnowitz_1969_rational_expectations_test_meta.json
outputs/comprehensive_analysis_2017_2025/: comprehensive_aligned_data.csv  comprehensive_analysis_report.tex  comprehensive_analysis_summary.txt
outputs/covid_analysis_2020_2022/: covid_aligned_data.csv  covid_analysis_report.tex  covid_analysis_summary.txt
outputs/covid_analysis_2020_2022/cache/: focus_20200301_to_20221231_20250723.pkl  ipca_20200301_to_20221231_20250723.pkl
outputs/post_covid_analysis_2023_2025/: post_covid_aligned_data.csv  post_covid_analysis_report.tex  post_covid_analysis_summary.txt
outputs/post_covid_analysis_2023_2025/cache/: focus_20230101_to_20250701_20250723.pkl  ipca_20230101_to_20250701_20250723.pkl
outputs/pre_covid_analysis_2017_2020/: pre_covid_aligned_data.csv  pre_covid_analysis_report.tex  pre_covid_analysis_summary.txt
outputs/pre_covid_analysis_2017_2020/cache/: focus_20170101_to_20200229_20250723.pkl  ipca_20170101_to_20200229_20250723.pkl
tests/: __init__.py  test_analyzer.py  test_analyzer_v2.py  test_integration_v2.py  test_statistical_tests.py  test_statistical_tests_v2.py  test_utils.py  test_visualizations_v2.py
