[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-reh-analyzer"
version = "1.0.0"
description = "Econometric analysis tool for assessing Brazilian Focus Bulletin inflation forecast rationality"
authors = [
    {name = "KoscheiiB", email = "KoscheiiB@users.noreply.github.com"}
]
maintainers = [
    {name = "KoscheiiB", email = "KoscheiiB@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "economics",
    "econometrics",
    "rational expectations",
    "forecasting",
    "brazil",
    "inflation",
    "central bank",
    "focus bulletin",
    "monetary policy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Economics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "statsmodels>=0.13.0",
    "scipy>=1.7.0",
    "python-bcb>=0.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
visualization = [
    "jupyter>=1.0.0",
    "plotly>=5.0.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "jupyter>=1.0.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/KoscheiiB/brazilian-reh-analyzer"
Documentation = "https://github.com/KoscheiiB/brazilian-reh-analyzer/blob/main/README.md"
Repository = "https://github.com/KoscheiiB/brazilian-reh-analyzer.git"
"Bug Tracker" = "https://github.com/KoscheiiB/brazilian-reh-analyzer/issues"

[project.scripts]
reh-analyzer = "brazilian_reh_analyzer.__main__:main"

[tool.setuptools.packages.find]
include = ["brazilian_reh_analyzer*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
